--- a/axycat-dashboard/src/components/NewProjectPopUp/Form.scss
+++ b/axycat-dashboard/src/components/NewProjectPopUp/Form.scss
@@ -5,5 +5,16 @@
   .buttons {
     display: flex;
     justify-content: flex-end;
+    margin-top: 20px;
+
+    .btn-white,
+    .btn-blue {
+      border: 0;
+      border-radius: 5px;
+      width: 100px;
+      height: 40px;
+      font-size: 16px;
+    }
   }
 }
+
