Add basic nested router

--- a/axycat-dashboard/src/components/Details.scss
+++ b/axycat-dashboard/src/components/Details.scss
@@ -1,25 +1,30 @@
 @import '../variables.scss';
+.details-sidebar-wrapper {
+  display: flex;
 
-.details-wrapper {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 24px;
-  height: 100%;
-  margin: 20px 0 0;
+  .details-wrapper {
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    height: 100%;
+    margin: 20px 0 0;
+  }
+  .card-container {
+    width: 475px;
+    height: 250px;
+    margin: 10px 10px;
+  }
+  .report-card-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .issue-card-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+
 }
-.card-container {
-  width: 475px;
-  height: 250px;
-  margin: 10px 10px;
-}
-.report-card-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-}
-.isue-card-container {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  width: 100%;
-}
+
